Fix invisible loader wrap to next line

--- a/src/components/translation-block.css
+++ b/src/components/translation-block.css
@@ -58,8 +58,14 @@
     0 1px 5px -2px var(--drop-shadow-color);
   text-shadow: 0 1px var(--bg-color);
 }
+.status-translation-block .translated-block .translation-info {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
 .status-translation-block .translated-block .translation-info * {
   vertical-align: middle;
+  flex-shrink: 0;
 }
 .status-translation-block .translated-source-select {
   appearance: none;
@@ -71,6 +77,8 @@
   background-color: var(--bg-faded-color);
   color: inherit;
   width: min-content;
+  min-width: 2em;
+  flex-shrink: 1 !important;
 }
 .status-translation-block .translated-block output {
   display: block;
